[tool.poetry]
name = "langgraph-cli"
version = "0.3.14"
description = "CLI for interacting with LangGraph API"
authors = []
license = "MIT"
readme = "README.md"
repository = "https://www.github.com/langchain-ai/langgraph"
packages = [{ include = "langgraph_cli" }]

[tool.poetry.scripts]
langgraph = "langgraph_cli.cli:cli"

[tool.poetry.dependencies]
python = "^3.10,<4.0"
click = "^8.1.7"
python-dotenv = ">=0.8.0"
langgraph-api = {version = ">=0.4.0.4", source = "tudou"}
langchain-core = ">=0.2.43,<0.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"
codespell = "^2.2.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
pytest-watch = "^4.2.0"
mypy = "^1.10.0"
msgspec = "^0.19.0"

[tool.pytest.ini_options]
# --strict-markers will raise errors on unknown marks.
# https://docs.pytest.org/en/7.1.x/how-to/mark.html#raising-errors-on-unknown-marks
#
# https://docs.pytest.org/en/7.1.x/reference/reference.html
# --strict-config       any warnings encountered while parsing the `pytest`
#                       section of the configuration file raise errors.
addopts = "--strict-markers --strict-config --durations=5 -vv"
asyncio_mode = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # isort
  "I",
]
lint.ignore = ["E501", "B008"]

[[tool.poetry.source]]
name = "tudou"
url = "http://robot:zbf9uqUNlhl@nexus.e-tudou.com/repository/tudou-pypi-group/simple"
priority = "primary"